# CB2325_Repo_Grupo_04

./: InterpolaçãoPolinomial.ipynb  README.md  padronizacao.ipynb  pyproject.toml
projeto/: main.py
projeto/CB2325NumericaG4/: aproximacao.py  erros.py  integracao.py  interpolacao.py  raizes.py  utils.py
projeto/CB2325NumericaG4/testes/: poly_interp_test.py  test_integral.py  test_linear_interp.py  test_raiz.py  teste_hermite_interp.py
projeto/CB2325NumericaG4/testes/__pycache__/: test_integral.py
sandbox/: exemplo.py
